--- a/workspace/compasso/src/main/resources/application.properties
+++ b/workspace/compasso/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 # ===============================
 # = DATA SOURCE - FIM
 # ===============================
