--- a/workspace/compasso/src/main/resources/application.properties
+++ b/workspace/compasso/src/main/resources/application.properties
@@ -1,26 +1,21 @@
 
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.datasource.url=jdbc:h2:mem:localhost:8080/concreteDb
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=SA
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # ===============================
 # = DATA SOURCE - POSTGRES SQL
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/compassoDb?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/compassoDb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8081
 # ===============================
 # = DATA SOURCE - FIM
 # ===============================
